# qt-programming-2025-master

./: .gitignore  AI_PATHFINDING_GUIDE.md  CMakeLists.txt  README.md
assets/: assets.qrc
src/: GameMode.cpp  GameMode.h  MyGame.cpp  MyGame.h
src/AI/: AIController.cpp  AIController.h  NavigationNode.cpp  NavigationNode.h  PathFinder.cpp  PathFinder.h
src/Items/: Item.h  Pickable.cpp  Pickable.h  PickupManager.cpp  PickupManager.h
src/Items/Characters/: BuffSystem.h  Character.cpp  Character.h  Green.cpp  Green.h  Link.cpp
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Items/Medicine/: EnergyBoost.cpp  EnergyBoost.h  GemBlue.cpp  GemBlue.h  GemGreen.cpp  GemGreen.h  HealthPotion.cpp  HealthPotion.h  MagicPotion.cpp  MagicPotion.h  Medicine.cpp  Medicine.h  MedicineManager.cpp  MedicineManager.h
src/Items/Weapons/: Fist.cpp  Fist.h  MeleeWeapon.cpp  MeleeWeapon.h  Projectile.cpp  Projectile.h  RangedWeapon.cpp  RangedWeapon.h  Raygun.cpp  Raygun.h  RaygunBig.cpp  RaygunBig.h  Sword.cpp  Sword.h  ThrowingStone.cpp  ThrowingStone.h  Weapon.cpp  Weapon.h  WeaponManager.cpp  WeaponManager.h
src/Physics/: PhysicsConstants.h
src/Scenes/: BattleScene.cpp  BattleScene.h  ChooseBattlefieldScene.cpp  ChooseBattlefieldScene.h  GameModeSelectionScene.cpp  GameModeSelectionScene.h  GameOverScene.cpp  GameOverScene.h  Scene.cpp  Scene.h  StartMenuScene.cpp  StartMenuScene.h
